--- a/access/css/style.css
+++ b/access/css/style.css
@@ -6,21 +6,21 @@
     list-style: none;
     text-decoration: none;
     transition: 0.3s;
-
+    scroll-behavior: smooth;
 
     font-family: 'Montserrat', sans-serif;
 }
 
 .container {
-    margin: 0 56px;
-    align-items: center;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 /*Main*/
 
 main {
-    background: url("../img/main/bg.png");
-
+    background: url("../img/main/bg.png") no-repeat center;
+    width: 100vw;
     height: 100vh;
 }
 
@@ -62,7 +62,7 @@ header {
 }
 
 .header_items {
-    margin-top: 10px;
+    margin: 40px;
 
     display: flex;
     justify-content: space-between;
@@ -73,8 +73,13 @@ header {
     gap: 32px;
 }
 
-.header_left ul li {
+.header_left ul li a {
     color: white;
+    font-size: 14pt;
+}
+
+.header_left ul li a:hover {
+    color: #887569;
     font-size: 14pt;
 }
 
@@ -130,6 +135,8 @@ header {
     flex-direction: column;
 
     max-width: 325px;
+
+    cursor: pointer;
 }
 
 .items_card_name {
@@ -252,6 +259,14 @@ footer {
 
 @media screen and (max-width: 795px) {
 
+    .container {
+        max-width: 700px;
+    }
+
+    .items_card {
+        margin: 0 auto;
+    }
+
     .header_left {
         display: none;
     }
@@ -262,6 +277,10 @@ footer {
 
     .header_center {
         margin-left: 270px;
+    }
+
+    .items_card:last-child {
+        display: none;
     }
 }
 
